--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <style>
         input{
             margin: 15px;
+            color:aqua;
         }
         input[type="text"]{
             width: 300px;
